--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Will you be my valentine?</h1>
     <img src="ralf immage.JPG" alt="imageofralf">
     <div>
-      <a href="index.html">
+      <a href="yes.html">
         <button class="yes">Yes</button>
       </a>
       <a href="index.html">
