--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <h1>Will you be my valentine?</h1>
     <img src="ralf immage.JPG" alt="imageofralf">
     <div>
-      <a href="yes.html">
+      <a href="yea.html">
         <button class="yes">Yes</button>
       </a>
-      <a href="index.html">
+      <a href="no.html">
         <button class="no">No</button>
       </a>
     </div>
