--- a/yea.html
+++ b/yea.html
@@ -9,7 +9,7 @@
 <body>
   <div class="background">
     <h1>Then call me!</h1>
-    <img src="hellyea ralf.gif" alt="imageofralf">
+    <img class="image" src="hellyea ralf.gif" alt="imageofralf">
     <div>
       <a href="no.html">
         <button class="no">No</button>
