--- a/no.html
+++ b/no.html
@@ -9,7 +9,7 @@
 <body>
   <div class="background">
     <h1>Damn Okay.</h1>
-    <img src="damn okay.jpg" alt="imageofralf">
+    <img class="image" src="damn okay.jpg" alt="imageofralf">
     <div>
       <a href="index.html">
         <button class="yes">Actually?</button>
