--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="background">
     <h1>Will you be my valentine?</h1>
-    <img src="ralf immage.JPG" alt="imageofralf">
+    <img class="image"  src="ralf immage.JPG" alt="imageofralf">
     <div>
       <a href="yea.html">
         <button class="yes">Yes</button>
