--- a/yea.html
+++ b/yea.html
@@ -11,8 +11,8 @@
     <h1>Then call me!</h1>
     <img class="image" src="hellyea ralf.gif" alt="imageofralf">
     <div>
-      <a href="no.html">
-        <button class="no">No</button>
+      <a href="index.html">
+        <button class="no">Wait</button>
       </a>
     </div>
   </div>
